# my-openev

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  app.py  debug_test.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
data/: emails.json  loader.py
graders/: classification_grader.py  reply_grader.py  safety_grader.py
scripts/: validate.py
server/: app.py
tasks/: base_task.py  easy_task.py  hard_task.py  medium_task.py
tests/: test_env.py
