[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email_triage_env"
version = "1.0.0"
description = "OpenEnv-compatible email triage environment for email triage and response generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29.0",
    "huggingface_hub>=0.23.0",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "gradio>=5.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "openai>=1.3.0",
    "openenv-core>=0.1.0",
    "openenv>=0.1.1",
]

[project.scripts]
server = "server.app:main"
